<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"/>

    <TextView
        android:id="@+id/mail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/Toolbar"
        android:text="@string/email_or_username"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mail_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/email_or_username"
        android:inputType="textEmailAddress|textPersonName"
        android:background="@drawable/edit_text_bg"
        android:padding="10dp"
        android:labelFor="@id/mail_edit_text"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_edit_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/password"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:padding="10dp"
            android:labelFor="@id/password_edit_text"
            android:autofillHints="@string/password"
            android:textColor="@color/colorAccent"/>

        <ImageButton
            android:id="@+id/password_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_visibility_24"
            android:contentDescription="@string/password" />


    </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/login"
        android:enabled="false"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_without_password"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/password_btn_bg"
        android:letterSpacing="0.1"
        android:paddingStart="27dp"
        android:paddingEnd="27dp"
        android:clickable="false"
        android:text="@string/log_in_without_password"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />


</RelativeLayout>